@@ -8,6 +8,8 @@ Revision history for Perl extension POE::Devel::ProcAlike
 
 	Added the event_profile metric to session data, it's still pending a POE update ( stat_getprofile )
 
+	Tweaked simple.pl to include a SIGINT handler for a sane shutdown
+
 * 0.01
 
 	initial release
